standardize folder structure between branches, this should avoid git branch switches breaking my local junction setup
(cherry picked from commit fb50ebfb8b41cc1173fa1e4378525002bf6f35ef)

# Conflicts:
#	pkgmeta.yaml

--- a/pkgmeta.yaml
+++ b/pkgmeta.yaml
@@ -14,3 +14,9 @@ move-folders:
     DungeonSpeedRunner/data_modules/VanillaRaids: DungeonSpeedRunner_VanillaRaids
     DungeonSpeedRunner/data_modules/BurningCrusadeDungeons: DungeonSpeedRunner_BurningCrusadeDungeons
     DungeonSpeedRunner/data_modules/BurningCrusadeRaids: DungeonSpeedRunner_BurningCrusadeRaids
+
+ignore:
+    - data_modules
+
+required-dependencies:
+    - 3358-deadly-boss-mods
