--- a/pkgmeta.yaml
+++ b/pkgmeta.yaml
@@ -7,6 +7,7 @@ externals:
     externals/AceConfig-3.0: https://repos.curseforge.com/wow/ace3/trunk/AceConfig-3.0
     externals/AceDB-3.0: https://repos.curseforge.com/wow/ace3/trunk/AceDB-3.0
     externals/AceDBOptions-3.0: https://repos.curseforge.com/wow/ace3/trunk/AceDBOptions-3.0
+    externals/AceGUI-3.0: https://repos.curseforge.com/wow/ace3/trunk/AceGUI-3.0
     externals/LibSharedMedia-3.0: https://repos.curseforge.com/wow/libsharedmedia-3-0/trunk
     externals/AceGUI-3.0-SharedMediaWidgets: https://repos.curseforge.com/wow/ace-gui-3-0-shared-media-widgets/trunk/AceGUI-3.0-SharedMediaWidgets
 
